added path parameter-based stop condition

--- a/default.ini
+++ b/default.ini
@@ -6,7 +6,8 @@ Start Latitude                 = [41.18520811, 41.18513607, 41.18513607]
 Start Longitude                = [-8.70618835, -8.7060334 , -8.70636713]
 Stop Latitude                  = [41.18520811, 41.18513607, 41.18513607]
 Stop Longitude                 = [-8.70618835, -8.7060334 , -8.70636713]
-Experiment Stop Time           = 250.
+Experiment Stop Time           = 400.
+Experiment Stop Parameter      = 6.05
 Log Data                       = True
 
 [Path]
